Destroy previous cropper instance if exists
This will solve issue #1 where changing source does not reflect on the cropper.

--- a/iron-cropper.html
+++ b/iron-cropper.html
@@ -61,6 +61,11 @@ Polymer 1.0 element that wraps around Cropper.js
         if (!window.Cropper) {
           return console.error('Cropper has not been initialized');
         }
+        
+        if (this._cropper) {
+          this._cropper.destroy();
+        }
+
 
         this._cropper = new window.Cropper(this.$.image, Object.assign({
           crop: this.crop.bind(this)
